lot of progress; styling and structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>SDSOnline</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <nav class="row">
+    <nav class="show-for-medium row">
       <div class="small-12">
         <div class="top-bar">
           <div class="top-bar-left">
@@ -18,9 +19,9 @@
           </div>
           <div class="top-bar-right">
             <ul class="menu">
-              <li><a href="#">About</a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#how-it-works">How it works</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -28,8 +29,138 @@
     </nav>
 
     <div class="hero row full-width">
-      <div class="columns"><img src="" alt=""></div>
+      <div class=""><img src="img/larger_workspace.jpg" alt="larger_workspace"></div>
     </div>
+
+    <section id="about" class="row">
+      <div class="small-offset-1 small-10 large-offset-2 large-8">
+        <h3 class="text-center">About</h3>
+        <p>
+          The transition to GHS will occasionally involve the complete turnover of
+          a facility’s MSDS library. Operating a facility often warrants the
+          addition of chemicals not included in your binders or databases over
+          time. With our on-site auditing service, we can come to your facility
+          and audit your complete chemical inventory, minimizing the downtime that
+          inevitably comes with being GHS compliant.
+        </p>
+      </div>
+    </section>
+
+    <section id="how-it-works" class="full-width">
+      <div class="row">
+        <h3>How it works</h3>
+        <div class="row">
+          <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns">
+            <i class="fa fa-battery-quarter fa-4x"></i>
+            <h4>Short description</h4>
+            <p class="text-left">
+              A wonderful serenity has taken possession of my entire soul, like
+              these sweet mornings of spring which I enjoy with my whole heart
+            </p>
+          </div>
+          <div class="small-offset-1 small-10 medium-3 columns">
+            <i class="fa fa-battery-half fa-4x"></i>
+            <h4>Short description</h4>
+            <p class="text-left">
+              A wonderful serenity has taken possession of my entire soul, like
+              these sweet mornings of spring which I enjoy with my whole heart
+            </p>
+          </div>
+          <div class="small-offset-1 small-10 medium-3 columns">
+            <i class="fa fa-battery-full fa-4x"></i>
+            <h4>Short description</h4>
+            <p class="text-left">
+              A wonderful serenity has taken possession of my entire soul, like
+              these sweet mornings of spring which I enjoy with my whole heart
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="row">
+        <h3 class="text-center">Contact</h3>
+        <h4 class="text-center">We welcome talking to us about anything, anytime!</h4>
+      </div>
+
+      <div class="form row">
+        <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns">
+          <label>Name
+            <input type="text" placeholder="John Doe">
+          </label>
+        </div>
+        <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
+          <label>Number
+            <input type="tel" placeholder="615-555-1034">
+          </label>
+        </div>
+        <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
+          <label>Email
+            <input type="email" placeholder="john.doe@gmail.com">
+          </label>
+        </div>
+        <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns end">
+          <label>Message
+            <input type="text" placeholder="Write your message here">
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-8 small-centered columns">
+          <button class="submit small-centered">Send</button>
+        </div>
+      </div>
+      <div class="row clipboard-email">
+        <h6 class="text-center">or copy the email to clipboard</h6>
+        <h4 class="text-center">inquiries@sdsupdateonline.com</h4>
+      </div>
+    </section>
+
+    <section class="links-container full-width">
+      <div class="row">
+        <div class="small-offset-1 small-10 medium-offset-0 medium-6 columns">
+          <!-- Logo -->
+        </div>
+
+        <div class="small-offset-1 small-10 medium-offset-0 medium-6 columns">
+          <div class="row">
+            <div class="small-12">
+              <i class="fa fa-phone fa-2x"></i> <span>217 898 9104 </span>
+            </div>
+            <div class="small-12">
+              <i class="fa fa-envelope-o fa-2x"></i> <span>217 898 9104 </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="links row">
+        <div class="small-6 medium-4 columns">
+          <h5><a href="#">OHSA Hazcon Information</a></h5>
+        </div>
+        <div class="small-6 medium-4 columns">
+          <h5><a href="">Set an alert for OHSA Hazcom</a></h5>
+        </div>
+        <div class="small-6 medium-4 columns">
+          <h5><a href="">About</a></h5>
+        </div>
+        <div class="small-6 medium-4 columns">
+          <h5><a href="">Terms of Service</a></h5>
+        </div>
+        <div class="small-6 medium-4 columns">
+          <h5><a href="">Self Audit Tips</a></h5>
+        </div>
+        <div class="small-6 medium-4 columns">
+          <h5><a href="">Our Web Designer’s Portfoio</a></h5>
+        </div>
+      </div>
+    </section>
+
+    <footer class="row">
+      <h6 class="small-5 columns text-left">© All Rights Reserved</h6>
+      <h6 class="small-5 columns text-right">Site by: Lawrence Humphrey</h6>
+    </footer>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
