final stretch duuuuuuuuuude

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top-bar">
           <div class="top-bar-left">
             <ul class="dropdown menu" data-dropdown-menu>
-              <li class="menu-text">Site Title</li>
+              <li class="menu-text"><img src="img/orange-logo-baby-blue-text.png" alt=""></li>
             </ul>
           </div>
           <div class="top-bar-right">
@@ -29,7 +29,15 @@
     </nav>
 
     <div class="hero row full-width">
-      <div class=""><img src="img/larger_workspace.jpg" alt="larger_workspace"></div>
+      <figure>
+        <img src="img/larger_workspace.jpg" alt="larger_workspace">
+        <figcaption>
+          <h1>Optimize your work hours</h1>
+          <h2>Some subheader</h2>
+          <button class="center">Sign me up</button>
+          <h6><a href="#about">or <span>learn more</span></a></h6>
+        </figcaption>
+      </figure>
     </div>
 
     <section id="about" class="row">
@@ -58,7 +66,7 @@
               these sweet mornings of spring which I enjoy with my whole heart
             </p>
           </div>
-          <div class="small-offset-1 small-10 medium-3 columns">
+          <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
             <i class="fa fa-battery-half fa-4x"></i>
             <h4>Short description</h4>
             <p class="text-left">
@@ -66,7 +74,7 @@
               these sweet mornings of spring which I enjoy with my whole heart
             </p>
           </div>
-          <div class="small-offset-1 small-10 medium-3 columns">
+          <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns end">
             <i class="fa fa-battery-full fa-4x"></i>
             <h4>Short description</h4>
             <p class="text-left">
@@ -119,19 +127,17 @@
 
     <section class="links-container full-width">
       <div class="row">
-        <div class="small-offset-1 small-10 medium-offset-0 medium-6 columns">
+        <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns">
           <!-- Logo -->
+          <img src="img/orange-logo-orange-text.png" alt="">
         </div>
 
-        <div class="small-offset-1 small-10 medium-offset-0 medium-6 columns">
-          <div class="row">
-            <div class="small-12">
-              <i class="fa fa-phone fa-2x"></i> <span>217 898 9104 </span>
-            </div>
-            <div class="small-12">
-              <i class="fa fa-envelope-o fa-2x"></i> <span>217 898 9104 </span>
-            </div>
-          </div>
+        <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns contact">
+          <i class="fa fa-phone fa-2x"></i> <span>217 898 9104</span>
+        </div>
+
+        <div class="small-offset-1 small-10 medium-offset-0 medium-5 columns contact">
+          <i class="fa fa-envelope-o fa-2x"></i> <span>inquiries@sdsupdateonline.com</span>
         </div>
       </div>
 
@@ -140,26 +146,26 @@
           <h5><a href="#">OHSA Hazcon Information</a></h5>
         </div>
         <div class="small-6 medium-4 columns">
-          <h5><a href="">Set an alert for OHSA Hazcom</a></h5>
+          <h5><a href="#">Set an alert for OHSA Hazcom</a></h5>
         </div>
         <div class="small-6 medium-4 columns">
-          <h5><a href="">About</a></h5>
+          <h5><a href="#">About</a></h5>
         </div>
         <div class="small-6 medium-4 columns">
-          <h5><a href="">Terms of Service</a></h5>
+          <h5><a href="#">Terms of Service</a></h5>
         </div>
         <div class="small-6 medium-4 columns">
-          <h5><a href="">Self Audit Tips</a></h5>
+          <h5><a href="#">Self Audit Tips</a></h5>
         </div>
         <div class="small-6 medium-4 columns">
-          <h5><a href="">Our Web Designer’s Portfoio</a></h5>
+          <h5><a href="#">Our Web Designer’s Portfoio</a></h5>
         </div>
       </div>
     </section>
 
     <footer class="row">
       <h6 class="small-5 columns text-left">© All Rights Reserved</h6>
-      <h6 class="small-5 columns text-right">Site by: Lawrence Humphrey</h6>
+      <h6 class="small-5 columns text-right">Site by: <strong>Lawrence Humphrey</strong></h6>
     </footer>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
