--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     <div class="hero row full-width">
       <figure>
-        <img src="img/larger_workspace.jpg" alt="larger_workspace">
+        <img src="img/Safety-Data-Sheets-Must-Replace-MSDS-Per-OSHA.jpg" alt="larger_workspace">
         <figcaption>
           <h1>Optimize your work hours</h1>
           <h2>Some subheader</h2>
-          <button class="center">Sign me up</button>
+          <a href="contact" class="center cta">Sign me up</a>
           <h6><a href="#about">or <span>learn more</span></a></h6>
         </figcaption>
       </figure>
@@ -58,7 +58,7 @@
       <div class="row">
         <h3>How it works</h3>
         <div class="row">
-          <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns">
+          <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns">
             <i class="fa fa-battery-quarter fa-4x"></i>
             <h4>Short description</h4>
             <p class="text-left">
@@ -66,7 +66,7 @@
               these sweet mornings of spring which I enjoy with my whole heart
             </p>
           </div>
-          <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
+          <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns">
             <i class="fa fa-battery-half fa-4x"></i>
             <h4>Short description</h4>
             <p class="text-left">
@@ -74,7 +74,7 @@
               these sweet mornings of spring which I enjoy with my whole heart
             </p>
           </div>
-          <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns end">
+          <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns end">
             <i class="fa fa-battery-full fa-4x"></i>
             <h4>Short description</h4>
             <p class="text-left">
@@ -103,7 +103,7 @@
             <input type="tel" placeholder="615-555-1034">
           </label>
         </div>
-        <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
+        <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns">
           <label>Email
             <input type="email" placeholder="john.doe@gmail.com">
           </label>
@@ -121,7 +121,7 @@
       </div>
       <div class="row clipboard-email">
         <h6 class="text-center">or copy the email to clipboard</h6>
-        <h4 class="text-center">inquiries@sdsupdateonline.com</h4>
+        <h4 class="email-link text-center">inquiries@sdsupdateonline.com</h4>
       </div>
     </section>
 
@@ -136,7 +136,7 @@
           <i class="fa fa-phone fa-2x"></i> <span>217 898 9104</span>
         </div>
 
-        <div class="small-offset-1 small-10 medium-offset-0 medium-5 columns contact">
+        <div class="small-offset-1 small-10 medium-offset-0 medium-5 columns contact end">
           <i class="fa fa-envelope-o fa-2x"></i> <span>inquiries@sdsupdateonline.com</span>
         </div>
       </div>
