--- a/index.html
+++ b/index.html
@@ -92,36 +92,40 @@
         <h4 class="text-center">We welcome talking to us about anything, anytime!</h4>
       </div>
 
-      <div class="form row">
-        <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns">
-          <label>Name
-            <input type="text" placeholder="John Doe">
-          </label>
+      <form action="inquiries@sdsupdateonline.com" method="post" enctype="text/plain">
+        <div class="form row">
+          <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns">
+            <label>Name
+              <input type="text" name="Name" value="" placeholder="John Doe" required>
+            </label>
+          </div>
+          <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
+            <label>Number
+              <input type="tel" name="Phone" placeholder="615-555-1034">
+            </label>
+          </div>
+          <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns" required>
+            <label>Email
+              <input type="email" name="Email" value="" placeholder="john.doe@gmail.com">
+            </label>
+          </div>
+          <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns end">
+            <label>Message
+              <input type="text" name="Message" value="" placeholder="Write your message here" required>
+            </label>
+          </div>
         </div>
-        <div class="small-offset-1 small-10 medium-offset-0 medium-3 columns">
-          <label>Number
-            <input type="tel" placeholder="615-555-1034">
-          </label>
+        <div class="row">
+          <div class="small-8 small-centered columns">
+            <input type="submit" class="cta small-centered" value="Send">
+          </div>
         </div>
-        <div class="small-offset-1 small-10 medium-offset-0 medium-4 columns">
-          <label>Email
-            <input type="email" placeholder="john.doe@gmail.com">
-          </label>
-        </div>
-        <div class="small-offset-1 small-10 medium-offset-1 medium-3 columns end">
-          <label>Message
-            <input type="text" placeholder="Write your message here">
-          </label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-8 small-centered columns">
-          <button class="submit small-centered">Send</button>
-        </div>
-      </div>
+      </form>
+
+
       <div class="row clipboard-email">
         <h6 class="text-center">or copy the email to clipboard</h6>
-        <h4 class="email-link text-center">inquiries@sdsupdateonline.com</h4>
+        <h4 class="email-link text-center" data-clipboard-text="inquiries@sdsupdateonline.com">inquiries@sdsupdateonline.com</h4>
       </div>
     </section>
 
@@ -171,6 +175,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="bower_components/clipboard/dist/clipboard.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
