--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h1>Optimize your work hours</h1>
           <h2>Some subheader</h2>
           <a href="contact" class="center cta">Sign me up</a>
-          <h6><a href="#about">or <span>learn more</span></a></h6>
+          <h6><a class="more" href="#about">or <span>learn more</span></a></h6>
         </figcaption>
       </figure>
     </div>
